[tool.poetry]
name = "zenv-cli"
version = "0.0.16"
description = ""
authors = ["evegny.zuev <zueves@gmail.com>"]
license = "MIT"
readme = 'README.md'
keywords = ['cli', 'docker', 'developer', 'environment']
homepage = 'https://github.com/zueve/zenv'
repository = 'https://github.com/zueve/zenv'
documentation = 'https://github.com/zueve/zenv'
packages = [
    { include = "zenv" },
]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"
click = "*"

[tool.poetry.dev-dependencies]
ipython = "^7.0"
pytest = "*"
flake8 = "^3.7"

[tool.poetry.scripts]
zenv = 'zenv.cli:cli'
ze = 'zenv.cli:exec'
