[tool.poetry]
name = "zenv-cli"
version = "0.4.3"
description = ""
authors = ["evegny.zuev <zueves@gmail.com>"]
license = "MIT"
readme = 'README.md'
keywords = ['cli', 'docker', 'developer', 'environment']
homepage = 'https://github.com/zueve/zenv'
repository = 'https://github.com/zueve/zenv'
documentation = 'https://github.com/zueve/zenv'
packages = [
    { include = "zenv" },
]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "^3.7"
bpython = "^0.22.1"

[tool.poetry.scripts]
zenv = 'zenv.cli:cli'
ze = 'zenv.cli:exec'
